--- a/desktop/index.html
+++ b/desktop/index.html
@@ -2,36 +2,82 @@
 <html>
     <head>
         <title>Slider</title>
-        <link rel="stylesheet" href="reveal.js/dist/reveal.css" />
-        <link rel="stylesheet" href="reveal.js/dist/theme/black.css" />
-        <link rel="stylesheet" href="./Views/CSS/Step.css">
+        <link rel="stylesheet" href="Wazo/css/main.css" />
+        <link rel="stylesheet" href="Wazo/css/themes/dark.css" />
+        <link rel="stylesheet" href="Views/CSS/Style.css" />
     </head>
     <body>
-        <div class="reveal">
-            <div class="slides">
-                <section>Slide 1</section>
-                <section>
-                    <section>Slide 2</section>
-                    <section data-markdown>
-                        <textare data-template>
-                        ```js [1|2|3|4]
-                            <div class="step">Step 1 <section>Data 1</section> </div>
-                            <div class="step">Step 2 <section>Data 2</section> </div>
-                            <div class="step">Step 3 <section>Data 3</section> </div>
-                            <div class="step">Step 4 <section>Data 4</section> </div>
-                        ```
-                        </textarea>
-                    </section>
-                    <section>Slide 3</section>
-                </section>
-                <section>Slide 4</section>
+        <div class="wazo">
+            <div class="container">
+                <div class="concept">
+                    <div class="concept__view">
+                        <div class="chapter-title">Hello, World!</div>
+                    </div>
+                </div>
+                <div class="concept red--progress">
+                    <div class="concept__view">
+                        <p class="chapter-title">Chapter 1</p>
+                    </div>
+                    <div class="concept__view">
+                        <p class="animated-chapter-1">Let's animate here</p>
+                    </div>
+                    <div class="concept__view">
+                        <p class="opacity-chapter-1">
+                            Let's manage opacity
+                        </p>
+                    </div>
+                </div>
+                <div class="concept orange">
+                    <div class="concept__view">
+                        <p class="chapter-title">Chapter 2</p>
+                    </div>
+                </div>
+                <div class="concept yellow">
+                    <div class="concept__view">
+                        <p class="chapter-title">Chapter 3</p>
+                    </div>
+                </div>
+                <div class="concept green">
+                    <div class="concept__view">
+                        <p class="chapter-title">Chapter 4</p>
+                    </div>
+                </div>
+                <div class="concept aqua">
+                    <div class="concept__view">
+                        <div class="chapter-title">Chapter 5</div>
+                    </div>
+                </div>
+                <div class="concept blue">
+                    <div class="concept__view">
+                        <p class="chapter-title">Chapter 6</p>
+                    </div>
+                </div>
+                <div class="concept violet">
+                    <div class="concept__view">
+                        <p class="chapter-title">Chapter 7</p>
+                    </div>
+                </div>
+                <div class="concept pink">
+                    <div class="concept__view">
+                        <p class="chapter-title">Chapter 8</p>
+                    </div>
+                </div>
+                <div class="concept marron">
+                    <div class="concept__view">
+                        <p class="chapter-title">Chapter 9</p>
+                    </div>
+                </div>
+                <div class="concept">
+                    <div class="concept__view">
+                        <p class="chapter-title">Thank you.</p>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <script src="Wazo/js/main.js"></script>
         <script src="./Views/JavaScripts/Events.js"></script>
         <script src="./Views/JavaScripts/Binder.js"></script>
-        <script src="reveal.js/dist/reveal.js"></script>
-        <script src="reveal.js/plugin/markdown/markdown.js"></script>
-        <script src="reveal.js/plugin/highlight/highlight.js"></script>
         <script src="./Views/JavaScripts/Slide.js"></script>
     </body>
 </html>
