--- a/desktop/index.html
+++ b/desktop/index.html
@@ -5,9 +5,11 @@
         <link rel="stylesheet" href="Wazo/css/main.css" />
         <link rel="stylesheet" href="Wazo/css/themes/dark.css" />
         <link rel="stylesheet" href="Views/CSS/Style.css" />
+
+        <script src="Wazo/js/main.js"></script>
     </head>
     <body>
-        <div class="wazo">
+        <div id="wazo">
             <div class="container">
                 <div class="concept">
                     <div class="concept__view">
@@ -75,9 +77,8 @@
             </div>
         </div>
 
-        <script src="Wazo/js/main.js"></script>
-        <script src="./Views/JavaScripts/Events.js"></script>
-        <script src="./Views/JavaScripts/Binder.js"></script>
         <script src="./Views/JavaScripts/Slide.js"></script>
+        <script src="./Views/JavaScripts/Binder.js"></script>
+        <script src="./Views/JavaScripts/Events.js"></script>
     </body>
 </html>
